<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.SettingsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/clearDB"
            style="@style/SettingsCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:id="@+id/clearDB_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_clearAll"
                style="@style/SettingsTextStyle" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mockDB"
            style="@style/SettingsCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:id="@+id/mockDB_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_mock"
                style="@style/SettingsTextStyle" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/chooseTheme"
            style="@style/SettingsCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                android:id="@+id/chooseTheme_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_theme"
                style="@style/SettingsTextStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <Spinner
                android:id="@+id/themeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="120dp"
                android:popupBackground="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_changeTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/sign_dialog_btn_background"
                    android:textColor="?colorOnPrimary"
                    android:text="Apply" />

            </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>