<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.NotificationsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/notificationsCard"
            style="@style/SettingsCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/notificationsOnTV"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/notificationsSwitch"
                        android:layout_alignParentLeft="true"
                        android:text="@string/notifications_on"
                        style="@style/SettingsTextStyle"
                        android:textColor="@color/black"/>

                    <Switch
                        android:id="@+id/notificationsSwitch"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:text="" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/notificationsPriorityTV"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/notificationsPrioritySpinner"
                        android:layout_alignParentLeft="true"
                        android:text="@string/notifications_priority"
                        style="@style/SettingsTextStyle" />

                    <Spinner
                        android:id="@+id/notificationsPrioritySpinner"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="0dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/notificationsDelayTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/notificationsDelayEdit"
                        android:layout_alignParentLeft="true"
                        android:text="@string/notifications_delay"
                        android:layout_centerVertical="true"
                        style="@style/SettingsTextStyle" />

                    <EditText
                        android:id="@+id/notificationsDelayEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:minEms="2"
                        android:inputType="number"
                        style="@style/SettingsTextStyle"
                        android:textColor="@drawable/edit_text_selector"/>

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>