<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/LoginDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_dialog_title" />

        <EditText
            android:id="@+id/loginEmailEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:hint="email"
            android:minEms="16"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/loginPasswordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="password"
            android:minEms="16"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="sign in"
            android:background="@drawable/sign_dialog_btn_background"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp" />

        <TextView
            style="@style/LoginDialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_sign_via" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_icon"
                android:padding="6dp"
                android:layout_marginStart="8dp"
                android:scaleType="centerInside"
                android:background="@color/white"
                android:layout_weight="0.2"/>
            <ImageButton
                android:id="@+id/btn_vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_vk_icon"
                android:padding="6dp"
                android:scaleType="centerInside"
                android:background="@color/white"
                android:layout_weight="0.2"/>
            <ImageButton
                android:id="@+id/btn_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_twitter_icon"
                android:padding="6dp"
                android:scaleType="centerInside"
                android:background="@color/white"
                android:layout_weight="0.2"/>
            <ImageButton
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_facebook_icon"
                android:padding="6dp"
                android:scaleType="centerInside"
                android:background="@color/white"
                android:layout_weight="0.2"/>
            <ImageButton
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_ok_icon"
                android:padding="6dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerInside"
                android:background="@color/white"
                android:layout_weight="0.165"/>

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <TextView
            style="@style/LoginDialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="or" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/signUp_btn_text"
            android:background="@drawable/sign_dialog_btn_background"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp" />


    </LinearLayout>
</ScrollView>